# canvas-autonomous-learner

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  pytest.ini
configs/: comparison_armB.yaml  continuous.yaml  default.yaml  hardware_run.yaml  sanity.yaml  sim_1b.yaml  sim_smoke.yaml  simultaneous.yaml  smoke.yaml
learner/: __init__.py  __main__.py  action_canvas.py  budget.py  claude_advisor.py  config.py  episode_canvas.py  events.py  explorer.py  gpu_monitor.py  hardware.py  metrics.py  novelty.py  orchestrator.py  plateau.py  range_tracker.py  registry.py  runtime_knobs.py  states.py  trainer_driver.py  verifier.py
scripts/: _charts.py  dashboard.py  explore_inference.py  explorer_smoke.py  generate_comparison_report.py  generate_report.py  infer_on_canvas.py  live_inference_dashboard.py  record_locked_val.py  run_arm_a.py  verify_action_canvases.py
scripts/dashboards/: live_inference_dashboard.py
scripts/dashboards/templates/: live_inference.html
tests/: conftest.py  test_budget.py  test_claude_advisor.py  test_curriculum_transition.py  test_dashboard_state.py  test_explore_sub_bursts.py  test_gpu_monitor.py  test_hardware_goto.py  test_metrics.py  test_per_joint_sub_bursts.py  test_plateau.py  test_range_tracker.py  test_registry.py  test_runtime_knobs.py  test_state_machine.py  test_state_selection.py  test_trainer_driver_integration.py  test_trainer_driver_run.py  test_verifier.py
